# LLMs

./: .gitignore  README.md  pyproject.toml  torchcodec.pth
intro/: ASR.py  Inference.md  NLP.md  attention.md  bias.md  nlpllms.md  rouge.md  solvingtasks.md  start.py  tokenizer.py  tokenizers.md  transformersArchitecture.md  working.md
intro/AutomaticSpeechRecognition/: ASR.py  whisperASR.py
intro/food_model/runs/Aug20_16-24-05_DESKTOP-VC7OA1F/: events.out.tfevents.1755687251.DESKTOP-VC7OA1F.6588.0
intro/imageClassification/: IC.py
intro/languageModeling/: causalLanguageModeling.py  inference.py
intro/my_awesome_food_model/runs/Aug20_16-27-41_DESKTOP-VC7OA1F/: events.out.tfevents.1755687466.DESKTOP-VC7OA1F.20424.0
intro/questionAnswering/: inference.py  qa.py
intro/summarization/: inference.py  summarizer.py
intro/textclassification/: inference.py  tc.py
intro/tokenClassification/: inference.py  tC.py
intro/translation/: inference.py  translation.py
transformer/: advgenctrl.md  behindpipeline.py  learningmodels.py  learntokenizers.py  multiseq.py  optimInferencedeploy.py
