[project]
name = "llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "ffmpeg>=1.4",
    "hf-xet>=1.1.5",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "jiwer>=4.0.0",
    "keras>=3.11.2",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.5",
    "sentencepiece>=0.2.0",
    "soundfile>=0.13.1",
    "tensorflow>=2.20.0",
    "torch>=2.7.1",
    "transformers>=4.54.0",
]
