[project]
name = "llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "numpy==2.2",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.9",
    "seqeval>=1.2.2",
    "torch>=2.8.0",
    "transformers>=4.55.3",
]
